Added friending via Twitter API.  And added StatsTweet.java to tell celebs what their numbers look like.

--- a/source/WEB-INF/classes/log4j.properties
+++ b/source/WEB-INF/classes/log4j.properties
@@ -32,6 +32,8 @@ log4j.logger.com.celebtwit.display.components.def=ERROR
 log4j.logger.com.celebtwit.email.EmailTemplateProcessor=INFO
 log4j.logger.com.celebtwit.scheduledjobs=INFO
 log4j.logger.com.celebtwit.scheduledjobs.GetTwitterPosts=DEBUG
+log4j.logger.com.celebtwit.scheduledjobs.StatsTweet=DEBUG
+log4j.logger.com.celebtwit.scheduledjobs.MakeFriends=DEBUG
 log4j.logger.com.celebtwit.session=INFO
 log4j.logger.com.celebtwit.session.UserSession=DEBUG
 log4j.logger.com.celebtwit.session.UrlSplitter=DEBUG
