--- a/source/WEB-INF/classes/log4j.properties
+++ b/source/WEB-INF/classes/log4j.properties
@@ -24,6 +24,7 @@ log4j.appender.CUSTOMAPPENDER.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m
 #Package-specific control
 log4j.logger.com.celebtwit=DEBUG
 log4j.logger.com.celebtwit.dao=INFO
+log4j.logger.com.celebtwit.helpers.SendLocalListToTwitterList=DEBUG
 log4j.logger.com.celebtwit.dao.hibernate.HibernateSessionCloser=DEBUG
 log4j.logger.com.celebtwit.dao.hibernate.HibernateCacheStats=DEBUG
 log4j.logger.com.celebtwit.dao.hibernate.HibernateSessionQuartzCloser=INFO
@@ -34,6 +35,7 @@ log4j.logger.com.celebtwit.scheduledjobs=INFO
 log4j.logger.com.celebtwit.scheduledjobs.GetTwitterPosts=DEBUG
 log4j.logger.com.celebtwit.scheduledjobs.StatsTweet=DEBUG
 log4j.logger.com.celebtwit.scheduledjobs.MakeFriends=DEBUG
+log4j.logger.com.celebtwit.scheduledjobs.TwitterListSync=DEBUG
 log4j.logger.com.celebtwit.session=INFO
 log4j.logger.com.celebtwit.session.UserSession=DEBUG
 log4j.logger.com.celebtwit.session.UrlSplitter=DEBUG
