Fix to pl bug where wrong pl shows up at first page load.

--- a/source/WEB-INF/classes/log4j.properties
+++ b/source/WEB-INF/classes/log4j.properties
@@ -24,13 +24,13 @@ log4j.appender.CUSTOMAPPENDER.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m
 #Package-specific control
 log4j.logger.com.celebtwit=DEBUG
 log4j.logger.com.celebtwit.dao=INFO
-log4j.logger.com.celebtwit.helpers.SendLocalListToTwitterList=DEBUG
 log4j.logger.com.celebtwit.dao.hibernate.HibernateSessionCloser=DEBUG
 log4j.logger.com.celebtwit.dao.hibernate.HibernateCacheStats=DEBUG
 log4j.logger.com.celebtwit.dao.hibernate.HibernateSessionQuartzCloser=INFO
 log4j.logger.com.celebtwit.dao.extendedpropscache.ExtendedPropsFactory=INFO
 log4j.logger.com.celebtwit.display.components.def=ERROR
 log4j.logger.com.celebtwit.email.EmailTemplateProcessor=INFO
+log4j.logger.com.celebtwit.htmlui.FilterMain=DEBUG
 log4j.logger.com.celebtwit.scheduledjobs=INFO
 log4j.logger.com.celebtwit.scheduledjobs.GetTwitterPosts=DEBUG
 log4j.logger.com.celebtwit.scheduledjobs.StatsTweet=DEBUG
