--- a/source/WEB-INF/classes/log4j.properties
+++ b/source/WEB-INF/classes/log4j.properties
@@ -34,9 +34,7 @@ log4j.logger.com.celebtwit.email.EmailTemplateProcessor=INFO
 log4j.logger.com.celebtwit.htmlui.FilterMain=DEBUG
 log4j.logger.com.celebtwit.scheduledjobs=INFO
 log4j.logger.com.celebtwit.scheduledjobs.GetTwitterPosts=DEBUG
-log4j.logger.com.celebtwit.scheduledjobs.StatsTweet=DEBUG
-log4j.logger.com.celebtwit.scheduledjobs.MakeFriends=DEBUG
-log4j.logger.com.celebtwit.scheduledjobs.TwitterListSync=DEBUG
+log4j.logger.com.celebtwit.scheduledjobs.FixTwitpostsWithNoPl=DEBUG
 log4j.logger.com.celebtwit.session=INFO
 log4j.logger.com.celebtwit.session.UserSession=DEBUG
 log4j.logger.com.celebtwit.session.UrlSplitter=DEBUG
