--- a/source/WEB-INF/classes/log4j.properties
+++ b/source/WEB-INF/classes/log4j.properties
@@ -24,6 +24,7 @@ log4j.appender.CUSTOMAPPENDER.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m
 #Package-specific control
 log4j.logger.com.celebtwit=DEBUG
 log4j.logger.com.celebtwit.cachedstuff=DEBUG
+log4j.logger.com.celebtwit.ads.AdsUtil=DEBUG
 log4j.logger.com.celebtwit.dao=INFO
 log4j.logger.com.celebtwit.dao.hibernate.HibernateSessionCloser=DEBUG
 log4j.logger.com.celebtwit.dao.hibernate.HibernateCacheStats=DEBUG
