Trying to improve production performance.

--- a/source/WEB-INF/classes/log4j.properties
+++ b/source/WEB-INF/classes/log4j.properties
@@ -8,38 +8,53 @@
 log4j.rootLogger=WARN, A1, CUSTOMAPPENDER
 
 # A1 is set to be a ConsoleAppender.
-log4j.appender.A1=org.apache.log4j.ConsoleAppender
-log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+#log4j.appender.A1=org.apache.log4j.ConsoleAppender
+#log4j.appender.A1.layout=org.apache.log4j.PatternLayout
+#log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+log4j.appender.A1=org.apache.log4j.RollingFileAppender
+log4j.appender.A1.File=${catalina.home}/logs/console.log
+log4j.appender.A1.layout=org.apache.log4j.TTCCLayout
+log4j.appender.A1.MaxFileSize=100MB
+log4j.appender.A1.MaxBackupIndex=5
+log4j.appender.A1.layout.ContextPrinting=enabled
+log4j.appender.A1.layout.DateFormat=ISO8601
 
 #Appends to the chainsaw util
 #log4j.appender.zeroconf=org.apache.log4j.net.ZeroConfSocketHubAppender
 #log4j.appender.zeroconf.Name=dNeeroZeroConf
 
 # CUSTOMAPPENDER is set to be a Custom appender.
-log4j.appender.CUSTOMAPPENDER=com.celebtwit.log4j.Log4jCustomAppender
-log4j.appender.CUSTOMAPPENDER.layout=org.apache.log4j.PatternLayout
-log4j.appender.CUSTOMAPPENDER.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+#log4j.appender.CUSTOMAPPENDER=com.celebtwit.log4j.Log4jCustomAppender
+#log4j.appender.CUSTOMAPPENDER.layout=org.apache.log4j.PatternLayout
+#log4j.appender.CUSTOMAPPENDER.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+log4j.appender.CUSTOMAPPENDER=org.apache.log4j.RollingFileAppender
+log4j.appender.CUSTOMAPPENDER.File=${catalina.home}/logs/console.log
+log4j.appender.CUSTOMAPPENDER.layout=org.apache.log4j.TTCCLayout
+log4j.appender.CUSTOMAPPENDER.MaxFileSize=100MB
+log4j.appender.CUSTOMAPPENDER.MaxBackupIndex=5
+log4j.appender.CUSTOMAPPENDER.layout.ContextPrinting=enabled
+log4j.appender.CUSTOMAPPENDER.layout.DateFormat=ISO8601
+
 
 #Package-specific control
-log4j.logger.com.celebtwit=DEBUG
-log4j.logger.com.celebtwit.cachedstuff=DEBUG
-log4j.logger.com.celebtwit.ads.AdsUtil=DEBUG
-log4j.logger.com.celebtwit.dao=INFO
+log4j.logger.com.celebtwit=ERROR
+log4j.logger.com.celebtwit.cachedstuff=ERROR
+log4j.logger.com.celebtwit.ads.AdsUtil=ERROR
+log4j.logger.com.celebtwit.dao=ERROR
 log4j.logger.com.celebtwit.dao.hibernate.HibernateSessionCloser=DEBUG
-log4j.logger.com.celebtwit.dao.hibernate.HibernateCacheStats=DEBUG
-log4j.logger.com.celebtwit.dao.hibernate.HibernateSessionQuartzCloser=INFO
-log4j.logger.com.celebtwit.dao.extendedpropscache.ExtendedPropsFactory=INFO
+log4j.logger.com.celebtwit.dao.hibernate.HibernateCacheStats=ERROR
+log4j.logger.com.celebtwit.dao.hibernate.HibernateSessionQuartzCloser=ERROR
+log4j.logger.com.celebtwit.dao.extendedpropscache.ExtendedPropsFactory=ERROR
 log4j.logger.com.celebtwit.display.components.def=ERROR
-log4j.logger.com.celebtwit.email.EmailTemplateProcessor=INFO
+log4j.logger.com.celebtwit.email.EmailTemplateProcessor=ERROR
 log4j.logger.com.celebtwit.htmlui.FilterMain=DEBUG
-log4j.logger.com.celebtwit.scheduledjobs=INFO
-log4j.logger.com.celebtwit.scheduledjobs.StatsTweetNonceleb=DEBUG
-log4j.logger.com.celebtwit.scheduledjobs.FindKeywordMentions=INFO
-log4j.logger.com.celebtwit.session=INFO
-log4j.logger.com.celebtwit.session.UserSession=DEBUG
-log4j.logger.com.celebtwit.session.UrlSplitter=DEBUG
-log4j.logger.com.celebtwit.ui.RoundedCornerBox=INFO
+log4j.logger.com.celebtwit.scheduledjobs=ERROR
+log4j.logger.com.celebtwit.scheduledjobs.StatsTweetNonceleb=ERROR
+log4j.logger.com.celebtwit.scheduledjobs.FindKeywordMentions=ERROR
+log4j.logger.com.celebtwit.session=ERROR
+log4j.logger.com.celebtwit.session.UserSession=ERROR
+log4j.logger.com.celebtwit.session.UrlSplitter=ERROR
+log4j.logger.com.celebtwit.ui.RoundedCornerBox=ERROR
 log4j.logger.org.apache.jsp=ERROR;
 log4j.logger.org.jboss.cache=ERROR
 log4j.logger.org.jgroups.protocols=ERROR
