Tweaks to make production run mo betta.

--- a/source/WEB-INF/classes/log4j.properties
+++ b/source/WEB-INF/classes/log4j.properties
@@ -51,6 +51,7 @@ log4j.logger.com.celebtwit.htmlui.FilterMain=DEBUG
 log4j.logger.com.celebtwit.scheduledjobs=ERROR
 log4j.logger.com.celebtwit.scheduledjobs.StatsTweetNonceleb=ERROR
 log4j.logger.com.celebtwit.scheduledjobs.FindKeywordMentions=ERROR
+log4j.logger.com.celebtwit.scheduledjobs.GetTwitterPosts=DEBUG
 log4j.logger.com.celebtwit.session=ERROR
 log4j.logger.com.celebtwit.session.UserSession=ERROR
 log4j.logger.com.celebtwit.session.UrlSplitter=ERROR
