Upgraded to Twitter4j 2.2

--- a/source/WEB-INF/classes/log4j.properties
+++ b/source/WEB-INF/classes/log4j.properties
@@ -55,6 +55,7 @@ log4j.logger.com.celebtwit.scheduledjobs.GetTwitterPosts=DEBUG
 log4j.logger.com.celebtwit.session=ERROR
 log4j.logger.com.celebtwit.session.UserSession=ERROR
 log4j.logger.com.celebtwit.session.UrlSplitter=ERROR
+log4j.logger.com.celebtwit.twitteroauth=DEBUG
 log4j.logger.com.celebtwit.ui.RoundedCornerBox=ERROR
 log4j.logger.org.apache.jsp=ERROR;
 log4j.logger.org.jboss.cache=ERROR
