logging tweaks to help debug ec2 issues

--- a/source/WEB-INF/classes/log4j.properties
+++ b/source/WEB-INF/classes/log4j.properties
@@ -5,6 +5,7 @@
 #static Level FATAL - The FATAL level designates very severe error events that will presumably lead the application to abort. 
 #
 ## Set root logger level and its only appender to A1.
+#log4j.rootLogger=WARN, A1, CUSTOMAPPENDER
 log4j.rootLogger=WARN, A1, CUSTOMAPPENDER
 
 # A1 is set to be a ConsoleAppender.
@@ -12,7 +13,7 @@ log4j.rootLogger=WARN, A1, CUSTOMAPPENDER
 #log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 #log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
 log4j.appender.A1=org.apache.log4j.RollingFileAppender
-log4j.appender.A1.File=${catalina.home}/logs/console.log
+log4j.appender.A1.File=${catalina.home}/logs/catalina.out
 log4j.appender.A1.layout=org.apache.log4j.TTCCLayout
 log4j.appender.A1.MaxFileSize=100MB
 log4j.appender.A1.MaxBackupIndex=5
@@ -27,24 +28,26 @@ log4j.appender.A1.layout.DateFormat=ISO8601
 #log4j.appender.CUSTOMAPPENDER=com.celebtwit.log4j.Log4jCustomAppender
 #log4j.appender.CUSTOMAPPENDER.layout=org.apache.log4j.PatternLayout
 #log4j.appender.CUSTOMAPPENDER.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
-log4j.appender.CUSTOMAPPENDER=org.apache.log4j.RollingFileAppender
-log4j.appender.CUSTOMAPPENDER.File=${catalina.home}/logs/console.log
-log4j.appender.CUSTOMAPPENDER.layout=org.apache.log4j.TTCCLayout
-log4j.appender.CUSTOMAPPENDER.MaxFileSize=100MB
-log4j.appender.CUSTOMAPPENDER.MaxBackupIndex=5
-log4j.appender.CUSTOMAPPENDER.layout.ContextPrinting=enabled
-log4j.appender.CUSTOMAPPENDER.layout.DateFormat=ISO8601
+#log4j.appender.CUSTOMAPPENDER=org.apache.log4j.RollingFileAppender
+#log4j.appender.CUSTOMAPPENDER.File=${catalina.home}/logs/console.log
+#log4j.appender.CUSTOMAPPENDER.layout=org.apache.log4j.TTCCLayout
+#log4j.appender.CUSTOMAPPENDER.MaxFileSize=100MB
+#log4j.appender.CUSTOMAPPENDER.MaxBackupIndex=5
+#log4j.appender.CUSTOMAPPENDER.layout.ContextPrinting=enabled
+#log4j.appender.CUSTOMAPPENDER.layout.DateFormat=ISO8601
 
 
 #Package-specific control
 log4j.logger.com.celebtwit=ERROR
 log4j.logger.com.celebtwit.cachedstuff=ERROR
 log4j.logger.com.celebtwit.ads.AdsUtil=ERROR
+log4j.logger.com.celebtwit.cache.providers.ehcache=DEBUG
 log4j.logger.com.celebtwit.dao=ERROR
 log4j.logger.com.celebtwit.dao.hibernate.HibernateSessionCloser=DEBUG
 log4j.logger.com.celebtwit.dao.hibernate.HibernateCacheStats=ERROR
 log4j.logger.com.celebtwit.dao.hibernate.HibernateSessionQuartzCloser=ERROR
 log4j.logger.com.celebtwit.dao.extendedpropscache.ExtendedPropsFactory=ERROR
+log4j.logger.com.celebtwit.dao.hibernate.TerracottaServerConfigFileUpdate=DEBUG
 log4j.logger.com.celebtwit.display.components.def=ERROR
 log4j.logger.com.celebtwit.email.EmailTemplateProcessor=ERROR
 log4j.logger.com.celebtwit.htmlui.FilterMain=DEBUG
@@ -62,4 +65,4 @@ log4j.logger.org.jboss.cache=ERROR
 log4j.logger.org.jgroups.protocols=ERROR
 log4j.logger.org.jgroups=ERROR
 log4j.logger.org.hibernate=ERROR
-log4j.logger.net.sf.ehcache=ERROR
+log4j.logger.net.sf.ehcache=INFO
