Infinispan 5.0.0CR3 conversion.  Big change.

--- a/source/WEB-INF/classes/log4j.properties
+++ b/source/WEB-INF/classes/log4j.properties
@@ -62,7 +62,10 @@ log4j.logger.com.celebtwit.twitteroauth=DEBUG
 log4j.logger.com.celebtwit.ui.RoundedCornerBox=ERROR
 log4j.logger.org.apache.jsp=ERROR;
 log4j.logger.org.jboss.cache=ERROR
-log4j.logger.org.jgroups.protocols=ERROR
-log4j.logger.org.jgroups=ERROR
+log4j.logger.org.jgroups.protocols=DEBUG
+log4j.logger.org.jgroups=DEBUG
 log4j.logger.org.hibernate=ERROR
 log4j.logger.net.sf.ehcache=INFO
+log4j.logger.org.infinispan=DEBUG
+log4j.logger.org.infinispan.factories.ComponentRegistry=INFO
+log4j.logger.com.celebtwit.cache.providers.infinispan=DEBUG
